feat(lineup) V25D41-C6: team chemistry agregado del lineup (TeamChemistryCalculator + LineupDTO.chemistryScore)
V25D40 (Sprint C5) gave each SessionPlayer a height+skills-aware overall. C6 takes the next level: aggregates the on-pitch lineup into a single TEAM chemistry score in [0, 99], exposed via the new LineupDTO.chemistryScore field. The aggregate is computed from the same SessionPlayer list the use case already had — no extra repo roundtrips, no engine changes.

Design: Opcion C mixto (refined from task's 3-option menu) with math justification.

  base          = round(AVG(player.calculateOverall()))                              // ~80 for typical lineups (C5-aware)

  skill_bonus   = round((SUM maxPerSkill[skill] * teamWeight[skill]) / 10)        // bounded ~0..6.4

  coverage_bonus = round(count(skills with maxPerSkill >= 80) * 0.3)            // bounded 0..3

  total         = clamp(0, 99, base + skill_bonus + coverage_bonus)

Why mixto (vs pure-AVG or pure-MAX):

  - Pure-AVG is too monotonous: skill injection barely moves the score because AVG is dominated by 6 base stats.

  - Pure-MAX captures 'has a star with X skill' but doesn't reward DEPTH (11 superstars in different skills = same as 1 superstar + 10 fillers).

  - Mixto separates talent (base) from special ability (skill_bonus + coverage) so each dimension is observable. Coverage bonus addresses depth.

Skill weights are the COLUMN AVERAGES of OverallCalculator per-position tables (each row sums to 0.65; same average per column = 0.65). Mathematically consistent with V25D40 weights — same upper bound (6.4), same rounding behavior.

Out-of-scope confirmado (NO se toco):

  - Engine V24 (aggregateOpponentDefenderSkills, etc) — C6 es lineup-side, no engine-side.

  - UI / frontend (no integrar visualmente; el campo en DTO existe pero UI lo ignora).

  - DB migrations (calcular on-the-fly, no persistir).

  - WorldPlayer / PlayerAttributes / Player.getOverall (chemistry es nivel team, no player).

File